add css for navigation :rocket:

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -21,15 +21,29 @@ hr {
 }
 
 .Navlink {
-  color: black;
+  color: #fff; 
+  font-weight: bolder;
+  font-size: 1.5rem;
 }
 
 .Navlink:hover {
-  color: black;
+  color: rgba(172, 172, 172);
 }
 
 .paragraph {
   margin: 15px; 
+}
+
+.navbar {
+  background: #343a40; 
+}
+
+.icon-navigation {
+  color: #fff;
+}
+
+.icon-navigation:hover {
+  color: rgba(172, 172, 172);
 }
 
 /* Card Section  */
@@ -100,4 +114,8 @@ span {
   cursor: pointer;
   position: relative;
   color: white; 
+}
+
+.tool-icon:hover {
+  color: rgba(172, 172, 172)
 }
